tests/typechecker/should_fail/timed_priority.csp
external timed_priority

p = timed_priority(STOP)
